# homebrew-rnmr

./: LICENSE  README.md  pyproject.toml  rnmr.py
Formula/: rnmr.rb
Formula/r/: rnmr.rb
src/rnmr/: cli.py
