[project]
name = "rnmr"
version = "1.0.4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammed Sadik", email = "50425929+mhmdxsadk@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.3.0",
    "colorama>=0.4.6",
]

[project.scripts]
rnmr = "rnmr.cli:RNMR.rename"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
