[project]
name = "rnmr"
version = "1.0.4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammed Sadik", email = "50425929+mhmdxsadk@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "colorama>=0.4.6",
]

[project.scripts]
rnmr = "rnmr.cli:RNMR.rename"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
